# lanes

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  compose.yml
.sqlx/: query-00a57fafc045f8bb0884ab6a9f8430bca44bcf06029c677fa2c714f9a17374a4.json  query-0524be8ce46549319b806acfa5c7f6de580d92c42b9779428c8e3252a888efb8.json  query-054c2112fa58593555faf8bb3d9a3ed6810eeff553056e58387680a9323cdb69.json  query-123658111e708970aee41e3e7fb18e8407dfe5e8031ff70488a851366c8e75b3.json  query-13585cd82a4d1c42d202f61cccd99ad3c91520d1b400dd51c61c31ac60ed0092.json  query-147493b0f78e3de7605b1468ff8f56811d0ea5e6df670eb3e251393a8606da4e.json  query-2fb44046cf3745698fd4c3034271b2fb662061274bad6ba65f32ae968d12dd03.json  query-355a4ba30cb0bd9a329f77d596f5a72e3ab724f5feee78b58b26a736f1043306.json  query-3a6b1e57e0d46fed7a67aa454426efbde30e028e41ff63046212957f7595cb5d.json  query-4a760ba48d85d79171a8c4f795fcd23582f2f0a8a698752898d479efaf77eedc.json  query-52efec854ca290b09996eef27368bbcdd00097242857f72d9abc2d9837cc3f51.json  query-69e7ad5355ed750c09cca2dca4671ab1fa12750fc502b0d663843518e3049f82.json  query-818aa07db0f8f0735d8f2e8f4a9391cae68838fcbb4d5a32cc2fb474fc08537e.json  query-84829b64f616ae57aaa0a9fefe5004156e24081c6f2a56cdefd1d4d41f8d8cc7.json  query-8c2947f4fc0ebc9e41910e5186714a6fcdda029bb5fecdbe738884aaa2e3d192.json  query-8d3680fa4d0ee3d986946ec1ad5dc6296d292bd08f406650c7176c30c4860abf.json  query-96867fd56596f8484fac9e9d0687e0a400d7810b8aabb9637aced9d2db0cb59f.json  query-98bd61f8b06afffa281e94a5cb5806f73bf0fb5947c91615cc2ff89159c62ca1.json  query-9a52d0816f576c7425467d651da5a3a2017d11534b610a7c33dc64fa93acc8dc.json  query-9d2a0e9fb791c7e1e663dc482df4c8531768fbec426567f779cf7c754c7c3518.json  query-aea63b0a4175bfc246813231bfe1878a3f3ec0d8c1fa830cf9dcb9e1a3ddf7f8.json  query-be33a7daf628388ddc27b218908c8d84b0c7822af70a037c21033963a051861b.json  query-c89269e7b5fb4f60176caf457cc2d310c22a78143ea82e3f1abda8388bb6fe21.json  query-c97d5ac583036bd28bf2e079168a8b3fa6892708071d03589174602675612103.json  query-ccdf0e3a4f5c75ab30ce85bbfda95073714ba08d9cc8c92d2584e6853e1ad307.json  query-cd032ca6bcbcb89329ea7b4fdf57a3d6dd8693a47a147618f4dede53345cfaee.json  query-d40ca1123f835498ba2d13608e30b798dfbb743f3f5dbaf0dfdc3f1479f94e59.json  query-d5e40a85f574634cd8757185a91f9ba04b94300160b3ca2374c63ca31164f052.json  query-e34627ee2a015b75d50c74984ddc33f9a268eef13ff7f4f0d5b998226b720b64.json  query-e529586ad89e6c310a230a2d7881105158fda7e28111d60328fa18c44547f329.json  query-f5858523c426417bf9b627ff7a3e364274e862d1004e81330f0429408c8c368c.json  query-f73dc092af7f84604972eaa2bb1c852e544a6166a1a237a63ac875bd79b09735.json  query-fe0b3ce215a2bd7f346c524d030a12de3bae83f141b1902779fca290966248e1.json
docs/postmortems/: 2026-06-13-workspace-hydration-crash.md
migrations/: 001_init.sql  002_auth.sql  003_workspace.sql  004_board_surface.sql  005_card_detail.sql  006_phase7.sql  007_access_levels.sql
src/: app.rs  cli.rs  hydration.rs  lib.rs  main.rs
src/api/: auth_api.rs  board_api.rs  calendar_api.rs  card_api.rs  card_detail_api.rs  invite_api.rs  list_api.rs  members_api.rs  mod.rs  notification_api.rs  token_api.rs  workspace_api.rs
src/auth/: backend.rs  helpers.rs  mod.rs  models.rs  role.rs
src/components/: board_card.rs  board_header.rs  checkbox.rs  create_board_modal.rs  error_banner.rs  form_field.rs  icon.rs  invite_panel.rs  kanban_card.rs  kanban_list.rs  label_chip.rs  logo.rs  mod.rs  modal.rs  presence_stack.rs  reconnect_toast.rs  share_modal.rs  sidebar.rs  today_strip.rs  topbar.rs
src/components/card_detail/: activity.rs  attachments.rs  checklist.rs  mod.rs  pickers.rs  sidebar.rs
src/mailer/: console.rs  mod.rs
src/models/: events.rs  mod.rs  rest_dto.rs
src/routes/: archive.rs  board.rs  calendar.rs  card_detail.rs  inbox.rs  invite.rs  login.rs  mod.rs  settings.rs  signup.rs  workspace.rs
src/seed/: mod.rs
src/server/: attachments.rs  board_rooms.rs  config.rs  db.rs  mod.rs  presence_registry.rs  scheduler.rs  state.rs  storage.rs  user_notif_registry.rs  ws_handler.rs
src/server/rest_api/: auth.rs  boards.rs  cards.rs  comments.rs  lists.rs  mod.rs  workspaces.rs
src/state/: mod.rs  ws_client.rs
style/: main.css
tests/: api_tests.rs  auth_tests.rs  board_api_tests.rs  broadcast.rs  calendar_api_tests.rs  card_api_tests.rs  card_detail_api_tests.rs  db_tests.rs  invite_tests.rs  list_api_tests.rs  mailer_tests.rs  notif.rs  presence.rs  realtime.rs  schema_tests.rs  seed_tests.rs  ssr_render_tests.rs  workspace_api_tests.rs
tests/realtime/: broadcast.rs  presence.rs
