[package]
name = "lanes"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# --- Shared (both ssr and hydrate targets) ---
leptos = { version = "0.8", features = [] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
serde = { version = "1", features = ["derive"] }

# uuid is SSR-only: ID generation happens server-side; models use String for IDs (Anti-Patterns)
uuid = { version = "1", features = ["v7"], optional = true }

# --- SSR only (server binary) ---
leptos_axum = { version = "0.8", optional = true }
axum = { version = "0.8", optional = true }
axum-macros = { version = "0.5", optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"], optional = true }
dotenvy = { version = "0.15", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
thiserror = { version = "2", optional = true }
fractional_index = { version = "2", features = ["serde"], optional = true }

# --- Hydrate only (WASM) ---
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[features]
default = []
hydrate = [
    "leptos/hydrate",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
]
ssr = [
    "dep:uuid",
    "dep:leptos_axum",
    "dep:axum",
    "dep:axum-macros",
    "dep:tokio",
    "dep:sqlx",
    "dep:dotenvy",
    "dep:clap",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:thiserror",
    "dep:fractional_index",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[package.metadata.leptos]
output-name = "lanes"
site-root = "target/site"
site-pkg-dir = "pkg"
assets-dir = "public"
style-file = "style/main.css"
bin-features = ["ssr"]
lib-features = ["hydrate"]
site-addr = "127.0.0.1:3000"
reload-port = 3001

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
